substrate/frame/support/test/tests/construct_runtime_ui/undefined_origin_part.stderr
error: `Pallet` does not have #[pallet::origin] defined, perhaps you should remove `Origin` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_origin_part.rs:22:1
   |
22 |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
70 | |         Pallet: pallet expanded::{}::{Pallet, Origin},
71 | |     }
72 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_origin_check::is_origin_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Origin` in module `pallet`
  --> tests/construct_runtime_ui/undefined_origin_part.rs:66:1
   |
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: frame_system expanded::{}::{Pallet, Call, Storage, Config<T>, Event<T>},
70 | |         Pallet: pallet expanded::{}::{Pallet, Origin},
71 | |     }
72 | | }
   | |_^ not found in `pallet`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
   |
18 + use frame_support_test::Origin;
   |
18 + use frame_system::Origin;
   |
